[gd_scene load_steps=23 format=2]

[ext_resource path="res://Brain/Brain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cell/Cell.tscn" type="PackedScene" id=2]
[ext_resource path="res://Play.gd" type="Script" id=3]
[ext_resource path="res://Clock/Clock.tscn" type="PackedScene" id=4]
[ext_resource path="res://Program/DataRing.tscn" type="PackedScene" id=5]
[ext_resource path="res://Program/Editor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/Yrsa/Yrsa-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Menu/Yrsa/Yrsa-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Menu/Yrsa/Yrsa-Light.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Program.gd" type="Script" id=10]
[ext_resource path="res://BG.png" type="Texture" id=11]
[ext_resource path="res://TextGoesOn.png" type="Texture" id=12]
[ext_resource path="res://Blins.ogg" type="AudioStream" id=13]
[ext_resource path="res://BG.ogg" type="AudioStream" id=14]
[ext_resource path="res://Program/DDIN/D-DIN.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://NextLevel.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if(COLOR.a > 0.0) {
		COLOR.a = sin(1.5*TIME + 1.5*dot(UV, vec2(2,1))) + 1.5;
	}
}
"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 15 )

[node name="Play" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 480.503 ],
"_edit_vertical_guides_": [ 915.088 ]
}

[node name="AudioBlins" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
autoplay = true
attenuation = 1.8025

[node name="AudioBG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true

[node name="BG" type="Sprite" parent="."]
texture = ExtResource( 11 )
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.576471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell" parent="." instance=ExtResource( 2 )]
position = Vector2( 217.824, 217.745 )
scale = Vector2( 0.4, 0.4 )
canFocus = false

[node name="DataRing" parent="Cell" instance=ExtResource( 5 )]
position = Vector2( 0, -6.10352e-05 )
inner_r = 320
outer_r = 380

[node name="CellList" type="Node2D" parent="."]
position = Vector2( 112.824, 517.062 )

[node name="Editor" parent="." instance=ExtResource( 6 )]
position = Vector2( 474.027, 61.2519 )
scale = Vector2( 0.1, 0.1 )
max_oriz_blocks = 5

[node name="Text" type="Node2D" parent="."]
position = Vector2( 904.888, 81.2754 )

[node name="ColorRect" type="ColorRect" parent="Text"]
margin_left = -130.0
margin_top = -81.0
margin_right = 119.0
margin_bottom = 185.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Text"]
margin_left = -120.0
margin_top = -73.0
margin_right = 110.0
margin_bottom = 179.0
mouse_filter = 2
custom_fonts/italics_font = SubResource( 1 )
custom_fonts/bold_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Placeholder text
[color=#44F][b]Company[/b][/color]
[b]Bold[/b]
[i]Italics/Thin[/i]
[color=#888]Note...[/color][/center]"
text = "Placeholder text
Company
Bold
Italics/Thin
Note..."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Sprite" parent="Text"]
visible = false
material = SubResource( 5 )
position = Vector2( 64.1285, 163.541 )
scale = Vector2( 0.433844, 0.433844 )
texture = ExtResource( 12 )

[node name="Next" type="Sprite" parent="Text"]
visible = false
material = SubResource( 5 )
position = Vector2( 64.1285, 163.541 )
scale = Vector2( 0.433844, 0.433844 )
texture = ExtResource( 16 )

[node name="Stats" type="Node2D" parent="."]
position = Vector2( 890, 520 )
__meta__ = {
"_edit_lock_": true
}

[node name="Brain" parent="Stats" instance=ExtResource( 1 )]
position = Vector2( -60, 0 )
scale = Vector2( 0.15, 0.15 )

[node name="Clock" parent="Stats" instance=ExtResource( 4 )]
position = Vector2( 60, 0 )
scale = Vector2( 0.15, 0.15 )
status = 0.1

[node name="Hint" type="Node2D" parent="Stats"]

[node name="ColorRect" type="ColorRect" parent="Stats/Hint"]
margin_left = -103.0
margin_top = -50.0
margin_right = 101.0
margin_bottom = -2.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Stats/Hint"]
margin_left = -96.0
margin_top = -44.0
margin_right = 92.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 6 )
text = "10/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Program" type="Node2D" parent="."]
position = Vector2( 774.806, 315.403 )
script = ExtResource( 10 )
[connection signal="program_changed" from="Editor" to="." method="_on_Editor_program_changed"]
[connection signal="gui_input" from="Text/ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="focused" from="Stats/Brain" to="." method="_on_Brain_focused"]
[connection signal="focused" from="Stats/Clock" to="." method="_on_Clock_focused"]
[connection signal="pressed" from="Program" to="." method="_on_Program_pressed"]
